--- a/cronograma.html
+++ b/cronograma.html
@@ -2,100 +2,103 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+  <title>11ª Conferência Municipal de Saúde – Cronograma Geral</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>11ª Conferência Municipal de Saúde de Montes Claros – Pré-Conferências</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 text-gray-900">
+<body class="bg-slate-50 text-slate-800">
 
-  <!-- Cabeçalho -->
-  <header class="bg-gradient-to-r from-green-700 via-blue-700 to-green-800 text-white py-10 shadow">
+  <header class="bg-emerald-700 text-white py-8 shadow">
     <div class="max-w-7xl mx-auto px-6">
-      <h1 class="text-3xl md:text-4xl font-bold mb-2">11ª Conferência Municipal de Saúde de Montes Claros – MG</h1>
-      <p class="text-lg md:text-xl font-light">Cronograma das Pré-Conferências | Brasil das Brasileiras e dos Brasileiros: SUS e Soberania</p>
-      <p class="mt-2 italic">Cuidar do Povo é Cuidar do Brasil!</p>
+      <h1 class="text-3xl font-bold">11ª Conferência Municipal de Saúde de Montes Claros – MG</h1>
+      <p class="mt-2 text-lg">Cronograma, checklist e execução institucional</p>
+      <p class="mt-1 text-sm opacity-90">Pré-conferências: 10 a 27 de março de 2026 · Conferência: 22, 23 e 24 de abril de 2026</p>
     </div>
   </header>
 
-  <!-- Conteúdo -->
   <main class="max-w-7xl mx-auto px-6 py-10">
     <section class="mb-10">
-      <h2 class="text-2xl font-semibold mb-4">📅 Cronograma (estilo Gantt)</h2>
-      <p class="text-gray-600 mb-6">Os dados abaixo são atualizados automaticamente conforme a planilha oficial das Pré-Conferências.</p>
-
-      <!-- Gantt -->
-      <div id="gantt" class="space-y-4"></div>
+      <h2 class="text-2xl font-semibold mb-4">📋 Cronograma Geral por Fases</h2>
+      <p class="text-slate-600">Os dados abaixo são atualizados automaticamente a partir da planilha oficial de acompanhamento.</p>
     </section>
+
+    <div id="cronograma" class="space-y-10"></div>
   </main>
 
-  <!-- Rodapé -->
-  <footer class="bg-gray-900 text-gray-300 py-6">
-    <div class="max-w-7xl mx-auto px-6 text-sm text-center">
-      Conselho Municipal de Saúde de Montes Claros • 11ª Conferência Municipal de Saúde
+  <footer class="bg-slate-200 text-slate-700 py-6 mt-10">
+    <div class="max-w-7xl mx-auto px-6 text-sm">
+      Conselho Municipal de Saúde de Montes Claros · Secretaria Executiva · 2026
     </div>
   </footer>
 
-  <!-- Script -->
-  <script>
-    const csvUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vT1QYVGTBNucVjwiDIazr3cKailQZ0hmR8hclCwURvwM2zCsIrwJHPjliAfofXp2TUSY4G-MH5BS8zO/pub?gid=1331650730&single=true&output=csv";
+<script>
+const CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-5x076YH0t-mm6JMJ0xRVys9MSgYmx__uofTX8JsbOxFH9LVUriyTMy-oUgiBN8D8hxC1MumyxccZ/pub?output=csv";
 
-    function parseCSV(text) {
-      const lines = text.trim().split("\n");
-      const headers = lines.shift().split(",").map(h => h.trim());
-      return lines.map(line => {
-        const values = line.split(",");
-        const obj = {};
-        headers.forEach((h, i) => obj[h] = values[i]?.replace(/"/g, '').trim());
-        return obj;
+function parseCSV(text) {
+  const lines = text.split("\n").filter(l => l.trim() !== "");
+  const headers = lines[0].split(",").map(h => h.trim());
+  return lines.slice(1).map(line => {
+    const values = line.split(",");
+    const obj = {};
+    headers.forEach((h, i) => obj[h] = values[i] || "");
+    return obj;
+  });
+}
+
+fetch(CSV_URL)
+  .then(res => res.text())
+  .then(csv => {
+    const data = parseCSV(csv);
+    const container = document.getElementById("cronograma");
+
+    const fases = {};
+
+    data.forEach(item => {
+      const fase = item["FASE"] || "Outros";
+      if (!fases[fase]) fases[fase] = [];
+      fases[fase].push(item);
+    });
+
+    Object.keys(fases).forEach(fase => {
+      const section = document.createElement("section");
+      section.className = "bg-white rounded-xl shadow border border-slate-200";
+
+      const header = document.createElement("div");
+      header.className = "px-6 py-4 border-b bg-slate-100 rounded-t-xl";
+      header.innerHTML = `<h3 class="text-xl font-bold">${fase}</h3>`;
+
+      const table = document.createElement("table");
+      table.className = "w-full text-sm";
+      table.innerHTML = `
+        <thead class="bg-slate-50 text-slate-600">
+          <tr>
+            <th class="text-left px-4 py-2">Nº</th>
+            <th class="text-left px-4 py-2">Etapa / Ação</th>
+            <th class="text-left px-4 py-2">Data Prevista</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      `;
+
+      const tbody = table.querySelector("tbody");
+
+      fases[fase].forEach(item => {
+        const tr = document.createElement("tr");
+        tr.className = "border-t hover:bg-emerald-50 transition";
+        tr.innerHTML = `
+          <td class="px-4 py-2 font-medium">${item["Nº"] || ""}</td>
+          <td class="px-4 py-2">${item["Etapa / Ação"] || ""}</td>
+          <td class="px-4 py-2">${item["Data Prevista"] || ""}</td>
+        `;
+        tbody.appendChild(tr);
       });
-    }
 
-    function formatDate(dateStr) {
-      const [year, month, day] = dateStr.split("-");
-      return `${day}/${month}/${year}`;
-    }
-
-    fetch(csvUrl)
-      .then(res => res.text())
-      .then(csv => {
-        const data = parseCSV(csv);
-        const gantt = document.getElementById("gantt");
-
-        data.forEach(item => {
-          const card = document.createElement("div");
-          card.className = "bg-white rounded-xl shadow-md p-6 border-l-8 border-green-600";
-
-          card.innerHTML = `
-            <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-4">
-              <div>
-                <h3 class="text-xl font-semibold text-green-800 mb-1">${item['TEMA']}</h3>
-                <p class="text-gray-700"><strong>📍 Local:</strong> ${item['LOCAL']}</p>
-                <p class="text-gray-700"><strong>🕒 Horário:</strong> ${item['HORA']}</p>
-              </div>
-              <div class="text-right">
-                <p class="text-lg font-bold text-blue-700">${formatDate(item['DATA'])}</p>
-                <a href="${item['LINK PARA LISTA DE PRESENÇA']}" target="_blank" class="inline-block mt-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
-                  Lista de Presença
-                </a>
-              </div>
-            </div>
-
-            <div class="mt-4">
-              <div class="h-3 bg-gray-200 rounded-full overflow-hidden">
-                <div class="h-3 bg-gradient-to-r from-green-500 to-blue-500 w-full"></div>
-              </div>
-              <p class="text-xs text-gray-500 mt-1">Evento único – visualização em linha do tempo</p>
-            </div>
-          `;
-
-          gantt.appendChild(card);
-        });
-      })
-      .catch(err => {
-        document.getElementById("gantt").innerHTML = "<p class='text-red-600'>Erro ao carregar os dados da planilha.</p>";
-        console.error(err);
-      });
-  </script>
+      section.appendChild(header);
+      section.appendChild(table);
+      container.appendChild(section);
+    });
+  });
+</script>
 
 </body>
 </html>
