--- a/cronograma.html
+++ b/cronograma.html
@@ -2,102 +2,163 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>11ª Conferência Municipal de Saúde – Cronograma Geral</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>11ª Conferência Municipal de Saúde – Planejamento</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-slate-50 text-slate-800">
 
-  <header class="bg-emerald-700 text-white py-8 shadow">
-    <div class="max-w-7xl mx-auto px-6">
-      <h1 class="text-3xl font-bold">11ª Conferência Municipal de Saúde de Montes Claros – MG</h1>
-      <p class="mt-2 text-lg">Cronograma, checklist e execução institucional</p>
-      <p class="mt-1 text-sm opacity-90">Pré-conferências: 10 a 27 de março de 2026 · Conferência: 22, 23 e 24 de abril de 2026</p>
+<body class="bg-slate-100 text-slate-800">
+
+<div class="max-w-7xl mx-auto p-6">
+  <!-- Cabeçalho -->
+  <header class="mb-6">
+    <h1 class="text-3xl font-bold text-emerald-700">
+      11ª Conferência Municipal de Saúde
+    </h1>
+    <p class="text-slate-600">
+      Planejamento • Preparação • Execução • Pós-Evento
+    </p>
+
+    <div class="mt-4">
+      <button onclick="setView('list')" class="px-4 py-2 bg-emerald-600 text-white rounded mr-2 hover:bg-emerald-700">
+        📋 Visualização Sequencial
+      </button>
+      <button onclick="setView('gantt')" class="px-4 py-2 bg-sky-600 text-white rounded hover:bg-sky-700">
+        📊 Visualização Gantt
+      </button>
     </div>
   </header>
 
-  <main class="max-w-7xl mx-auto px-6 py-10">
-    <section class="mb-10">
-      <h2 class="text-2xl font-semibold mb-4">📋 Cronograma Geral por Fases</h2>
-      <p class="text-slate-600">Os dados abaixo são atualizados automaticamente a partir da planilha oficial de acompanhamento.</p>
-    </section>
+  <!-- LISTA -->
+  <section id="listView" class="space-y-6">
 
-    <div id="cronograma" class="space-y-10"></div>
-  </main>
-
-  <footer class="bg-slate-200 text-slate-700 py-6 mt-10">
-    <div class="max-w-7xl mx-auto px-6 text-sm">
-      Conselho Municipal de Saúde de Montes Claros · Secretaria Executiva · 2026
+    <!-- Fase -->
+    <div class="bg-white rounded shadow p-4">
+      <h2 class="text-xl font-semibold text-sky-700 mb-2">
+        🟦 FASE 1 – Atos Institucionais (Jan–Fev)
+      </h2>
+      <ul class="space-y-1 text-sm">
+        <li>✅ <strong>Convocação Oficial</strong> — 21/01/2026</li>
+        <li>Publicação no Diário Oficial — 21–24/01/2026</li>
+        <li>Definição de datas e locais — até 30/01/2026</li>
+        <li>Instituição da Comissão Organizadora — até 30/01/2026</li>
+        <li>Regimento Interno (elaboração e publicação) — até 15/02/2026</li>
+      </ul>
     </div>
-  </footer>
+
+    <div class="bg-white rounded shadow p-4">
+      <h2 class="text-xl font-semibold text-green-700 mb-2">
+        🟩 FASE 2 – Planejamento Operacional (Fev)
+      </h2>
+      <ul class="space-y-1 text-sm">
+        <li>Planejamento orçamentário — até 05/02/2026</li>
+        <li>Identidade visual e comunicação — até 10/02/2026</li>
+        <li>Criação de site / central informativa — até 10/02/2026</li>
+        <li>Formulários, inscrições e listas — até 20/02/2026</li>
+      </ul>
+    </div>
+
+    <div class="bg-white rounded shadow p-4">
+      <h2 class="text-xl font-semibold text-yellow-600 mb-2">
+        🟨 FASE 3 – Pré-Conferências (Março)
+      </h2>
+      <ul class="grid grid-cols-2 gap-2 text-sm">
+        <li>10/03 – Servidores Municipais</li>
+        <li>11/03 – Prestadores e PCDs</li>
+        <li>12/03 – Grande Renascença</li>
+        <li>13/03 – Grande Santos Reis</li>
+        <li>17/03 – Grande Delfino</li>
+        <li>18/03 – Grande Independência</li>
+        <li>19/03 – Grande Major Prates</li>
+        <li>20/03 – Grande Maracanã</li>
+        <li>23/03 – LGBTQIA+</li>
+        <li>24/03 – Zona Rural</li>
+        <li>25/03 – Igualdade Racial</li>
+        <li>26/03 – Saúde da Mulher</li>
+        <li>27/03 – População em Situação de Rua</li>
+      </ul>
+    </div>
+
+    <div class="bg-white rounded shadow p-4">
+      <h2 class="text-xl font-semibold text-red-600 mb-2">
+        🟥 FASE 5 – Conferência Municipal
+      </h2>
+      <p class="text-sm mb-2">📅 22, 23 e 24 de Abril de 2026</p>
+      <ul class="space-y-1 text-sm">
+        <li>22/04 – Credenciamento e abertura</li>
+        <li>23/04 – Grupos de trabalho</li>
+        <li>24/04 – Plenária Final e eleição de delegados</li>
+      </ul>
+    </div>
+
+    <div class="bg-white rounded shadow p-4">
+      <h2 class="text-xl font-semibold text-purple-700 mb-2">
+        🟪 FASE 6 – Pós-Conferência
+      </h2>
+      <ul class="space-y-1 text-sm">
+        <li>Relatório Final — até 15/05/2026</li>
+        <li>Certificados e envio à etapa estadual</li>
+        <li>Avaliação interna — até 20/05/2026</li>
+      </ul>
+    </div>
+
+  </section>
+
+  <!-- GANTT -->
+  <section id="ganttView" class="hidden">
+    <div class="bg-white rounded shadow p-6 space-y-4">
+
+      <h2 class="text-xl font-semibold text-slate-700 mb-4">
+        📊 Linha do Tempo Geral (Gantt Simplificado)
+      </h2>
+
+      <div class="space-y-3 text-sm">
+
+        <div>
+          <p class="mb-1">🟦 Atos Institucionais</p>
+          <div class="w-full bg-slate-200 rounded h-4">
+            <div class="bg-sky-600 h-4 rounded" style="width: 30%"></div>
+          </div>
+        </div>
+
+        <div>
+          <p class="mb-1">🟩 Planejamento Operacional</p>
+          <div class="w-full bg-slate-200 rounded h-4">
+            <div class="bg-green-600 h-4 rounded" style="width: 25%"></div>
+          </div>
+        </div>
+
+        <div>
+          <p class="mb-1">🟨 Pré-Conferências</p>
+          <div class="w-full bg-slate-200 rounded h-4">
+            <div class="bg-yellow-500 h-4 rounded" style="width: 20%"></div>
+          </div>
+        </div>
+
+        <div>
+          <p class="mb-1">🟥 Conferência Municipal</p>
+          <div class="w-full bg-slate-200 rounded h-4">
+            <div class="bg-red-600 h-4 rounded" style="width: 10%"></div>
+          </div>
+        </div>
+
+        <div>
+          <p class="mb-1">🟪 Pós-Conferência</p>
+          <div class="w-full bg-slate-200 rounded h-4">
+            <div class="bg-purple-600 h-4 rounded" style="width: 15%"></div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+</div>
 
 <script>
-const CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-5x076YH0t-mm6JMJ0xRVys9MSgYmx__uofTX8JsbOxFH9LVUriyTMy-oUgiBN8D8hxC1MumyxccZ/pub?output=csv";
-
-function parseCSV(text) {
-  const lines = text.split("\n").filter(l => l.trim() !== "");
-  const headers = lines[0].split(",").map(h => h.trim());
-  return lines.slice(1).map(line => {
-    const values = line.split(",");
-    const obj = {};
-    headers.forEach((h, i) => obj[h] = values[i] || "");
-    return obj;
-  });
-}
-
-fetch(CSV_URL)
-  .then(res => res.text())
-  .then(csv => {
-    const data = parseCSV(csv);
-    const container = document.getElementById("cronograma");
-
-    const fases = {};
-
-    data.forEach(item => {
-      const fase = item["FASE"] || "Outros";
-      if (!fases[fase]) fases[fase] = [];
-      fases[fase].push(item);
-    });
-
-    Object.keys(fases).forEach(fase => {
-      const section = document.createElement("section");
-      section.className = "bg-white rounded-xl shadow border border-slate-200";
-
-      const header = document.createElement("div");
-      header.className = "px-6 py-4 border-b bg-slate-100 rounded-t-xl";
-      header.innerHTML = `<h3 class="text-xl font-bold">${fase}</h3>`;
-
-      const table = document.createElement("table");
-      table.className = "w-full text-sm";
-      table.innerHTML = `
-        <thead class="bg-slate-50 text-slate-600">
-          <tr>
-            <th class="text-left px-4 py-2">Nº</th>
-            <th class="text-left px-4 py-2">Etapa / Ação</th>
-            <th class="text-left px-4 py-2">Data Prevista</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      `;
-
-      const tbody = table.querySelector("tbody");
-
-      fases[fase].forEach(item => {
-        const tr = document.createElement("tr");
-        tr.className = "border-t hover:bg-emerald-50 transition";
-        tr.innerHTML = `
-          <td class="px-4 py-2 font-medium">${item["Nº"] || ""}</td>
-          <td class="px-4 py-2">${item["Etapa / Ação"] || ""}</td>
-          <td class="px-4 py-2">${item["Data Prevista"] || ""}</td>
-        `;
-        tbody.appendChild(tr);
-      });
-
-      section.appendChild(header);
-      section.appendChild(table);
-      container.appendChild(section);
-    });
-  });
+  function setView(view) {
+    document.getElementById("listView").classList.toggle("hidden", view !== "list");
+    document.getElementById("ganttView").classList.toggle("hidden", view !== "gantt");
+  }
 </script>
 
 </body>
