--- a/cronograma.html
+++ b/cronograma.html
@@ -27,7 +27,7 @@
 
 <script>
 // URL CORRIGIDA – mesma planilha informada pelo usuário (publicada como CSV)
-const CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vT1QYVGTBNucVjwiDIazr3cKailQZ0hmR8hclCwURvwM2zCsIrwJHPjliAfofXp2TUSY4G-MH5BS8zO/pub?gid=1331650730&single=true&output=csv";
+const CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-5x076YH0t-mm6JMJ0xRVys9MSgYmx__uofTX8JsbOxFH9LVUriyTMy-oUgiBN8D8hxC1MumyxccZ/pub?output=csv";
 
 const ORDEM_FASES = [
   "FASE 1 – ATOS INSTITUCIONAIS E ESTRUTURAÇÃO",
