--- a/11.html
+++ b/11.html
@@ -27,7 +27,7 @@
         .card-track {
             display: flex;
             transition: transform 0.7s cubic-bezier(0.19, 1, 0.22, 1);
-            position: absolute;
+            position: relative;
             left: 50%;
         }
 
