--- a/11.html
+++ b/11.html
@@ -27,32 +27,32 @@
 const fases = [
   {
     titulo: "🟦 FASE 1 – Atos Institucionais e Estruturação",
-    url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-5x076YH0t-mm6JMJ0xRVys9MSgYmx__uofTX8JsbOxFH9LVUriyTMy-oUgiBN8D8hxC1MumyxccZ/pub?gid=0&single=true&output=csv",
+    url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-5x076YH0t-mm6JMJ0xRVys9MSgYmx__uofTX8JsbOxFH9LVUriyTMy-oUgiBN8D8hxC1MumyxccZ/pub?gid=1535549349&single=true&output=csv",
     cor: "border-blue-500 bg-blue-50"
   },
   {
     titulo: "🟩 FASE 2 – Planejamento Operacional e Comunicação",
-    url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-5x076YH0t-mm6JMJ0xRVys9MSgYmx__uofTX8JsbOxFH9LVUriyTMy-oUgiBN8D8hxC1MumyxccZ/pub?gid=1&single=true&output=csv",
+    url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-5x076YH0t-mm6JMJ0xRVys9MSgYmx__uofTX8JsbOxFH9LVUriyTMy-oUgiBN8D8hxC1MumyxccZ/pub?gid=236489178&single=true&output=csv",
     cor: "border-green-500 bg-green-50"
   },
   {
     titulo: "🟨 PRÉ-CONFERÊNCIAS – Execução",
-    url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-5x076YH0t-mm6JMJ0xRVys9MSgYmx__uofTX8JsbOxFH9LVUriyTMy-oUgiBN8D8hxC1MumyxccZ/pub?gid=2&single=true&output=csv",
+    url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-5x076YH0t-mm6JMJ0xRVys9MSgYmx__uofTX8JsbOxFH9LVUriyTMy-oUgiBN8D8hxC1MumyxccZ/pub?gid=167556386&single=true&output=csv",
     cor: "border-yellow-500 bg-yellow-50"
   },
   {
     titulo: "🟦 FASE 4 – Preparação Final",
-    url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-5x076YH0t-mm6JMJ0xRVys9MSgYmx__uofTX8JsbOxFH9LVUriyTMy-oUgiBN8D8hxC1MumyxccZ/pub?gid=4&single=true&output=csv",
+    url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-5x076YH0t-mm6JMJ0xRVys9MSgYmx__uofTX8JsbOxFH9LVUriyTMy-oUgiBN8D8hxC1MumyxccZ/pub?gid=1219958470&single=true&output=csv",
     cor: "border-indigo-500 bg-indigo-50"
   },
   {
     titulo: "🟥 CONFERÊNCIA MUNICIPAL",
-    url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-5x076YH0t-mm6JMJ0xRVys9MSgYmx__uofTX8JsbOxFH9LVUriyTMy-oUgiBN8D8hxC1MumyxccZ/pub?gid=5&single=true&output=csv",
+    url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-5x076YH0t-mm6JMJ0xRVys9MSgYmx__uofTX8JsbOxFH9LVUriyTMy-oUgiBN8D8hxC1MumyxccZ/pub?gid=1255324166&single=true&output=csv",
     cor: "border-red-500 bg-red-50"
   },
   {
     titulo: "🟪 PÓS-CONFERÊNCIA",
-    url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-5x076YH0t-mm6JMJ0xRVys9MSgYmx__uofTX8JsbOxFH9LVUriyTMy-oUgiBN8D8hxC1MumyxccZ/pub?gid=6&single=true&output=csv",
+    url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-5x076YH0t-mm6JMJ0xRVys9MSgYmx__uofTX8JsbOxFH9LVUriyTMy-oUgiBN8D8hxC1MumyxccZ/pub?gid=1055030855&single=true&output=csv",
     cor: "border-purple-500 bg-purple-50"
   }
 ];
