--- a/lista.html
+++ b/lista.html
@@ -100,6 +100,8 @@ select, input[type="text"] {
 
 <script>
 const conselheiros = [
+"NÃO SOU CONSELHEIRO",
+"AGNA SOARES DA SILVA MENEZES",
 "ALEXANDRE DOURADO",
 "AMANDA MENDES SOARES",
 "ANA MARIA PEREIRA DE SOUZA RODRIGUES",
@@ -114,12 +116,54 @@ const conselheiros = [
 "EDMILSON ALVES DA SILVA",
 "EDUARDO LUIZ DA SILVA",
 "EMANUELA TOMAS DA SILVA CONCEIÇÃO",
+"EMILLE EUNICE ANTUNES DIAS MATOS",
 "ERNANDES RODRIGUES MORAES",
 "FABIANA PEREIRA MORI",
 "FARLEY SINDEAUX RIBEIRO",
+"FELIPE SOARES AMARAL",
+"FERNANDA FAGUNDES AZEVEDO SINDEAUX",
 "FERNANDO ANTÔNIO DIAS DE ANDRADE",
 "GERALDO DA COSTA SILVA",
+"HENRIQUE ANDRADE BARBOSA",
+"HERICK RODRIGUES ARAÚJO",
+"IMACULADA CONCEIÇÃO BARBOSA",
+"IVANY REIS SANTANA",
+"JAMILSON GANDRA MOREIRA",
+"JAQUELINE RODRIGUES AGUIAR DE CARVALHO",
+"JOEL FRANCISCO BORGES",
+"JOSÉ DOS REIS RODRIGUES",
+"JOSÉ GERALDO RAMOS",
 "JÚLIO CÉSAR ARAÚJO LOPES",
+"JÚLIO CÉSAR PEREIRA",
+"JÚNEO DE JESUS SOUZA",
+"KELLY MENDES FAGUNDES",
+"LUCIMERE MARTA DE SOUZA AMORIM",
+"MÁRCIO CARDOSO DA SILVA",
+"MARCOS BORGES OLIVEIRA",
+"MARIA CLARA LELIS RAMOS CARDOSO",
+"MARIA DOS REIS RIBEIRO DIAS",
+"MARIA LEONIDES DE QUEIROZ OLIVEIRA",
+"MARIANA CRISTINA MEIRA CAMBUÍ",
+"MARILDA BATISTA DA SILVA",
+"MAURINA DA SILVA CARVALHO",
+"MÔNICA DE FÁTIMA FERNANDES FERREIRA",
+"NAIARA OLIVEIRA SILVA",
+"NAYRA CRISTINE LACERDA LOURES",
+"PATRICIA ANTUNES DOS SANTOS",
+"RAFAEL CARVALHO MACIEL",
+"RAFAELA DE SOUZA FREITAS",
+"RAIMARA GONÇALVES PEREIRA",
+"RICARDO SOARES DE OLIVEIRA",
+"ROGÉRIO GONÇALVES",
+"ROSANA SOARES RUAS",
+"RUTH ALVES XAVIER SILVA",
+"SANDRA SIMONE MENDES GONÇALVES",
+"SANDRA VANELLE FONSECA",
+"SHEILLA SILVA MENDES",
+"TEREZINHA RAMOS CORDEIRO",
+"THIAGO HENRIQUE ALVES DE SOUZA",
+"VALCIR SOARES DA SILVA",
+"VALDECI ALVES COSTA",
 "WASHINGTON LUIS CARVALHO SOUTO",
 "WILHAS FERREIRA"
 ];
