--- a/lista.html
+++ b/lista.html
@@ -2,13 +2,12 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Confirmação de Presença – CMS Montes Claros</title>
+<title>Confirmação de Presença – CMS</title>
 
 <style>
 body {
     font-family: Inter, Arial, sans-serif;
     background: #f4f6f8;
-    margin: 0;
     padding: 30px;
 }
 
@@ -24,15 +23,29 @@ h1 {
 }
 
 .card {
-    background: #ffffff;
+    background: #fff;
     border: 1px solid #dcdcdc;
     border-radius: 8px;
     padding: 16px;
     transition: all 0.2s ease;
 }
 
+.card:hover {
+    background: #f0f0f0;
+}
+
 .card.active {
     border-color: #000;
+}
+
+.card.confirmado {
+    background: #e6f4ea;
+    border-color: #2e7d32;
+}
+
+.card.justificado {
+    background: #fdecea;
+    border-color: #c62828;
 }
 
 .name {
@@ -69,10 +82,6 @@ select, input[type="text"] {
     padding: 6px;
     margin-top: 8px;
 }
-
-.submit {
-    margin-top: 40px;
-}
 </style>
 </head>
 
@@ -80,23 +89,21 @@ select, input[type="text"] {
 
 <h1>Confirmação de Presença – Conselho Municipal de Saúde</h1>
 
-<form
+<form id="form"
   action="https://docs.google.com/forms/d/e/1FAIpQLSf8OzdnyNoyaMWPUFKb189v5lRG5a4X9HKnwhZlc0CnM2vR_w/formResponse"
   method="POST"
+  target="hidden_iframe"
 >
 
-<!-- CAMPOS OCULTOS DO GOOGLE FORMS -->
 <input type="hidden" name="entry.1269404299" id="nome">
 <input type="hidden" name="entry.1651111226" id="presenca">
 <input type="hidden" name="entry.1304754079" id="justificativa">
 
 <div class="grid" id="lista"></div>
 
-<div class="submit">
-    <button type="submit" class="primary">Enviar</button>
-</div>
-
 </form>
+
+<iframe name="hidden_iframe" style="display:none;"></iframe>
 
 <script>
 const conselheiros = [
@@ -192,9 +199,10 @@ conselheiros.forEach(nome => {
     card.innerHTML = `
         <div class="name">${nome}</div>
         <div class="actions">
-            <button type="button" onclick="confirmar('${nome}')">Confirmar presença</button>
-            <button type="button" onclick="justificar('${nome}')">Justificar ausência</button>
+            <button type="button" onclick="confirmar(this,'${nome}')">Confirmar presença</button>
+            <button type="button" onclick="justificar(this,'${nome}')">Justificar ausência</button>
             <div class="justificativa"></div>
+            <button type="button" class="primary" onclick="enviar()">Enviar</button>
         </div>
     `;
 
@@ -207,46 +215,54 @@ conselheiros.forEach(nome => {
     lista.appendChild(card);
 });
 
-function confirmar(nome) {
+function confirmar(btn,nome) {
+    const card = btn.closest(".card");
+    resetCards();
+    card.classList.add("confirmado","active");
     document.getElementById("nome").value = nome;
     document.getElementById("presenca").value = "Confirmo Presença";
     document.getElementById("justificativa").value = "";
-
-    limparJustificativas();
 }
 
-function justificar(nome) {
+function justificar(btn,nome) {
+    const card = btn.closest(".card");
+    resetCards();
+    card.classList.add("justificado","active");
     document.getElementById("nome").value = nome;
     document.getElementById("presenca").value = "Quero justificar ausência";
 
-    limparJustificativas();
-
-    const container = document.querySelector(".card.active .justificativa");
-
+    const container = card.querySelector(".justificativa");
     container.innerHTML = `
         <select onchange="selecionarMotivo(this)">
             <option value="">Selecione o motivo</option>
-            ${motivos.map(m => `<option value="${m}">${m}</option>`).join("")}
+            ${motivos.map(m => `<option>${m}</option>`).join("")}
         </select>
-        <input type="text" placeholder="Descreva o motivo..." style="display:none;"
-               oninput="document.getElementById('justificativa').value=this.value">
+        <input type="text" placeholder="Descreva o motivo..." style="display:none"
+        oninput="document.getElementById('justificativa').value=this.value">
     `;
 }
 
-function selecionarMotivo(select) {
-    const input = select.nextElementSibling;
-
-    if (select.value === "Outro") {
+function selecionarMotivo(sel) {
+    const input = sel.nextElementSibling;
+    if (sel.value === "Outro") {
         input.style.display = "block";
         document.getElementById("justificativa").value = "";
     } else {
         input.style.display = "none";
-        document.getElementById("justificativa").value = select.value;
+        document.getElementById("justificativa").value = sel.value;
     }
 }
 
-function limparJustificativas() {
-    document.querySelectorAll(".justificativa").forEach(j => j.innerHTML = "");
+function enviar() {
+    document.getElementById("form").submit();
+    alert("Registro enviado com sucesso ✔");
+}
+
+function resetCards() {
+    document.querySelectorAll(".card").forEach(c => {
+        c.classList.remove("confirmado","justificado");
+        c.querySelector(".justificativa").innerHTML = "";
+    });
 }
 </script>
 
