--- a/visitas.html
+++ b/visitas.html
@@ -31,7 +31,7 @@
         
         <!-- Imagem de Topo Principal -->
         <div class="w-full overflow-hidden bg-white">
-            <img src="https://i.ibb.co/7dBtCCGf/Form-Header-28.png" alt="Cabeçalho de Visitas" class="w-full h-auto object-contain">
+            <img src="https://i.ibb.co/FLc433Br/Form-Header-28.png" alt="Relatórios de Visitas da Câmara de Atenção Primária do Conselho Municipal de Saúde nas UBS" class="w-full h-auto object-contain">
         </div>
 
         <!-- Header & Nav -->
